adding styling to rooms page

--- a/src/main/resources/templates/rooms.html
+++ b/src/main/resources/templates/rooms.html
@@ -3,6 +3,8 @@
       xmlns:th="http://www.thymeleaf.org">
   <head>
     <title>View Rooms</title>
+    <link rel="stylesheet" th:href="@{/styles.css}" />
+
   </head>
   
   <body>
