--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
     <h1>Welcome to...</h1>
     <img th:src="@{/images/reservearoom.png}"/>
     <h2>Reserve a room</h2>
-        <a th:href="@{/reserve}">Make a Reservation</a><br/>
+        <a th:href="@{/}">Make a Reservation</a><br/>
  
     <h2>See all rooms</h2>
         <a th:href="@{/rooms}">View Rooms</a><br/>
