added hashing passwords, viewing / cancelling reservations, search room tests

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,5 +14,8 @@
     <h2>See all rooms</h2>
         <a th:href="@{/rooms}">View Rooms</a><br/>
 
+    <h2>See your reservations</h2>
+    <a th:href="@{/myreservations}">View Reservations</a><br/>
+
   </body>
 </html>
